// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`01 - Node.js CI with Matrix 1`] = `
{
  "cdkactions_node-ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'ci' stack.
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: \${{ matrix.node-version }}
      - name: Install
        run: npm ci
      - name: Lint
        run: npm run lint
      - name: Test
        run: npm test
    strategy:
      fail-fast: false
      matrix:
        nodeVersion:
          - "18"
          - "20"
          - "22"
name: Node.js CI
on:
  pull_request:
    branches:
      - main
  push:
    branches:
      - main
    paths:
      - .github/workflows/cdkactions_node-ci.yaml
      - src/**
      - package.json
"
,
}
`;

exports[`02 - Docker Build and Push 1`] = `
{
  "cdkactions_docker.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'docker' stack.
concurrency:
  cancel-in-progress: true
  group: docker-\${{ github.ref }}
jobs:
  push:
    environment:
      name: production
      url: https://ghcr.io
    permissions:
      attestations: write
      contents: read
      id-token: write
      packages: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Login to GHCR
        uses: docker/login-action@v3
        with:
          password: \${{ secrets.GITHUB_TOKEN }}
          registry: ghcr.io
          username: \${{ github.actor }}
      - name: Build and push
        uses: docker/build-push-action@v5
        with:
          push: true
          tags: ghcr.io/\${{ github.repository }}:latest
name: Docker Publish
on:
  push:
    branches:
      - main
    tags:
      - v*
permissions:
  contents: read
  packages: write
"
,
}
`;

exports[`03 - Multi-Job Pipeline with Dependencies 1`] = `
{
  "cdkactions_pipeline.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'pipeline' stack.
jobs:
  build:
    outputs:
      artifact_id: \${{ steps.upload.outputs.artifact-id }}
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
      - id: upload
        name: Upload
        uses: actions/upload-artifact@v4
        with:
          name: dist
          path: dist/
  deploy:
    environment: production
    if: github.ref == 'refs/heads/main'
    needs:
      - test
    runs-on: ubuntu-latest
    steps:
      - name: Download artifact
        uses: actions/download-artifact@v4
        with:
          name: dist
      - name: Deploy
        run: ./deploy.sh
  notify:
    if: always()
    needs:
      - deploy
    runs-on: ubuntu-latest
    steps:
      - name: Notify
        run: echo "Pipeline finished"
  test:
    needs:
      - build
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Test
        run: npm test
name: Build → Test → Deploy
on:
  push:
    branches:
      - main
"
,
}
`;

exports[`04 - Scheduled Workflow with Cron 1`] = `
{
  "cdkactions_stale.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'stale' stack.
jobs:
  stale:
    permissions:
      issues: write
      pull-requests: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/stale@v9
        with:
          days-before-close: 7
          days-before-stale: 60
          stale-issue-message: This issue is stale.
name: Close Stale Issues
on:
  schedule:
    - cron: 0 0 * * *
      timezone: America/New_York
    - cron: 0 12 * * *
      timezone: America/New_York
"
,
}
`;

exports[`05 - Manual Dispatch with Typed Inputs 1`] = `
{
  "cdkactions_deploy-manual.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'deploy' stack.
jobs:
  deploy:
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo "Deploying..."
name: Manual Deploy
on:
  workflow_dispatch:
    inputs:
      concurrency:
        default: "1"
        description: Parallel deploy count
        required: false
        type: number
      dryRun:
        default: false
        description: Dry run only
        required: false
        type: boolean
      environment:
        description: Target environment
        required: true
        type: environment
      logLevel:
        description: Log verbosity
        options:
          - debug
          - info
          - warn
          - error
        required: true
        type: choice
run-name: Deploy \${{ inputs.environment }} by \${{ github.actor }}
"
,
}
`;

exports[`06 - Reusable Workflow (workflow_call) 1`] = `
{
  "cdkactions_build-reusable.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'reusable' stack.
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
name: Reusable Build
on:
  workflow_call:
    inputs:
      nodeVersion:
        description: Node.js version
        required: true
        type: string
      uploadArtifact:
        default: true
        description: Upload build artifact
        required: false
        type: boolean
    outputs:
      buildHash:
        description: SHA of the build output
        value: \${{ jobs.build.outputs.hash }}
    secrets:
      npmToken:
        required: true
      sentryDsn:
        required: false
"
,
  "cdkactions_release.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'reusable' stack.
jobs:
  call-build:
    secrets: inherit
    uses: ./.github/workflows/cdkactions_build-reusable.yaml
    with:
      nodeVersion: "20"
      uploadArtifact: true
name: Release
on:
  push:
    tags:
      - v*
"
,
}
`;

exports[`07 - Container Job with Services 1`] = `
{
  "cdkactions_integration.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'integration' stack.
jobs:
  integration:
    container:
      env:
        NODE_ENV: test
      image: node:20-bookworm
      options: "--cpus 2"
      volumes:
        - /tmp/cache:/cache
    runs-on: ubuntu-latest
    services:
      postgres:
        env:
          POSTGRES_DB: testdb
          POSTGRES_PASSWORD: test
          POSTGRES_USER: test
        image: postgres:16
        options: "--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5"
        ports:
          - 5432:5432
      redis:
        command: redis-server --requirepass testpass
        entrypoint: ""
        image: redis:7
        ports:
          - 6379:6379
    steps:
      - uses: actions/checkout@v4
      - name: Run integration tests
        run: npm run test:integration
name: Integration Tests
on:
  push:
    branches:
      - main
"
,
}
`;

exports[`08 - Composite Action with Typed I/O 1`] = `
{
  "cdkactions_ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'composite' stack.
jobs:
  build:
    runs-on: ubuntu-latest
    steps: []
name: CI
on:
  push:
    branches:
      - main
"
,
}
`;

exports[`09 - Typed Expressions and Conditions 1`] = `
{
  "cdkactions_expressions.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'expressions' stack.
jobs:
  deploy:
    if: (github.ref == 'refs/heads/main' && !github.actor == 'dependabot[bot]')
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo deploying
name: Expressions Demo
on:
  push:
    branches:
      - main
"
,
}
`;

exports[`10 - Cross-Workflow Dependencies 1`] = `
{
  "cdkactions_ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'cross-wf' stack.
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - name: Build
        run: npm run build
name: CI
on:
  push:
    branches:
      - main
"
,
  "cdkactions_deploy.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'cross-wf' stack.
jobs:
  deploy:
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo deploying
name: Deploy
on:
  workflow_run:
    workflows:
      - CI
"
,
}
`;

exports[`11 - Full Permissions and Concurrency 1`] = `
{
  "cdkactions_secure.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'secure' stack.
concurrency:
  cancel-in-progress: false
  group: security-\${{ github.ref }}
jobs:
  scan:
    concurrency: scan-serial
    permissions:
      contents: read
      security-events: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - uses: github/codeql-action/init@v3
      - uses: github/codeql-action/analyze@v3
name: Security Scan
on:
  push:
    branches:
      - main
permissions:
  actions: read
  contents: read
  id-token: write
  models: read
  security-events: write
"
,
}
`;

exports[`12 - Multi-Platform Build with Runner Groups 1`] = `
{
  "cdkactions_build.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'multi-platform' stack.
jobs:
  build:
    continue-on-error: true
    runs-on:
      group: large-runners
      labels:
        - linux-x64-8core
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: make build ARCH=\${{ matrix.arch }}
    strategy:
      fail-fast: false
      matrix:
        arch:
          - x64
          - arm64
        os:
          - ubuntu-latest
          - macos-latest
          - windows-latest
      max-parallel: 4
    timeout-minutes: 60
name: Multi-Platform Build
on:
  push:
    branches:
      - main
"
,
}
`;

exports[`13 - GitHub Pages Deployment 1`] = `
{
  "cdkactions_pages.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'pages' stack.
concurrency:
  cancel-in-progress: false
  group: pages
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
      - uses: actions/upload-pages-artifact@v3
        with:
          path: ./dist
  deploy:
    environment:
      name: github-pages
      url: \${{ steps.deployment.outputs.page_url }}
    needs:
      - build
    runs-on: ubuntu-latest
    steps:
      - id: deployment
        uses: actions/deploy-pages@v4
name: Deploy to Pages
on:
  push:
    branches:
      - main
permissions:
  contents: read
  id-token: write
  pages: write
"
,
}
`;

exports[`14 - Event Coverage: Discussions, Branch Protection, Merge Group 1`] = `
{
  "cdkactions_branch-rules.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
jobs:
  audit:
    runs-on: ubuntu-latest
    steps:
      - name: Audit
        run: echo "Branch rule changed"
name: Branch Protection Audit
on:
  branch_protection_rule:
    types:
      - created
      - edited
      - deleted
"
,
  "cdkactions_discussion-bot.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
jobs:
  handle:
    runs-on: ubuntu-latest
    steps:
      - name: Handle
        run: echo "Discussion event"
name: Discussion Bot
on:
  discussion:
    types:
      - created
      - answered
      - unanswered
      - category_changed
  discussion_comment:
    types:
      - created
"
,
  "cdkactions_merge-queue.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
jobs:
  ci:
    runs-on: ubuntu-latest
    steps:
      - name: CI
        run: echo "Merge queue check"
name: Merge Queue CI
on:
  merge_group:
    types:
      - checks_requested
"
,
}
`;

exports[`15 - Central Runner Registry 1`] = `
{
  "cdkactions_custom-runners.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'runners' stack.
jobs:
  build-arm:
    runs-on: ci-arm64
    steps:
      - name: Build
        run: make build ARCH=arm64
  build-x64:
    runs-on: ci-linux-x64
    steps:
      - name: Build
        run: make build
  train:
    runs-on: gpu-a100-80gb
    steps:
      - name: Train model
        run: python train.py
    timeout-minutes: 360
name: Custom Runners
on:
  push:
    branches:
      - main
"
,
}
`;

exports[`16 - Typed Action References 1`] = `
{
  "cdkactions_build.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'action-refs' stack.
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - id: co
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
          lfs: true
      - id: node
        uses: actions/setup-node@v4
        with:
          cache: npm
          node-version: "20"
      - name: Build
        run: npm run build
      - id: upload
        uses: actions/upload-artifact@v4
        with:
          name: dist
          path: dist/
name: Build with Action
on:
  push:
    branches:
      - main
"
,
}
`;
